# torch-training-loop

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  dodo.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: cnn_fashion_mnist.py  gan_fashion_mnist_custom_loop.py  rnn_classifying_names.py  wgan_gp_fashion_mnist_custom_loop.py
src/training_loop/: __init__.py  distributed.py  exceptions.py  progress_reporter.py  types.py
src/training_loop/callbacks/: __init__.py  callback.py  early_stopping.py  model_checkpoint.py  tensorboard_logger.py
src/training_loop/training_loops/: __init__.py  distributed_training_loop.py  distributed_training_step.py  simple_training_loop.py  simple_training_step.py  state_serializable.py  training_loop.py  training_step.py  utils.py
tests/: progress_reporter_test.py
tests/callbacks/: callback_test.py  early_stopping_test.py  model_checkpoint_test.py  tensorboard_logger_test.py
tests/training_loops/: distributed_training_loop_gloo_test.py  simple_training_loop_test.py  simple_training_step_test.py  simple_training_step_util_test.py  training_loop_test.py  utils.py
training_loop/: types.py
training_loop/callbacks/: __init__.py  callback.py  early_stopping.py
training_loop/training_loops/: training_loop.py
