[project]
name = "torch-training-loop"
description = "Simple Keras-inspired Training Loop for Pytorch."
authors = [
    {name = "beekill", email = "nguyenmbquan95@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torcheval",
    "pandas",
    "numpy",
    "tqdm",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
CHANGELOG = "https://github.com/beekill95/torch-training-loop/blob/main/CHANGELOG.md"
homepage = "https://github.com/beekill95/torch-training-loop"
repository = "https://github.com/beekill95/torch-training-loop"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true


[tool.pdm.build]
includes = [
    "src/training_loop",
]


[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.4.2",
    "pytest-mock<4.0.0,>=3.11.1",
    "pre-commit<4.0.0,>=3.4.0",
    "pytest-rerunfailures<13.0,>=12.0",
    "tensorboard",
]
examples = [
    "torchvision",
    "jupyterlab<5.0.0,>=4.0.7",
    "jupytext<2.0.0,>=1.15.2",
    "matplotlib<4.0.0,>=3.6.0",
    "ipywidgets<9.0.0,>=8.1.1",
]


[tool.pdm.version]
source = "scm"
write_to = "src/training_loop/_version.py"
write_template = """
# Generated by pdm version.
__version__ = "{}"
"""

[tool.yapf]
based_on_style = "yapf"
indent_width = "4"
column_limit = "88"
