[tool.poetry]
name = "torch-training-loop"
version = "0.0.0"
description = "Simple Keras-inspired Training Loop for Pytorch."
authors = ["beekill <nguyenmbquan95@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "training_loop", from = "src" }]
homepage = "https://github.com/beekill95/torch-training-loop"
repository = "https://github.com/beekill95/torch-training-loop"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"CHANGELOG" = "https://github.com/beekill95/torch-training-loop/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "*"
torcheval = "*"
pandas = "*"
numpy = [
    { version = "<1.26.0", python = "<3.9" },
    { version = ">=1.26.0", python = ">=3.9" },
]
tqdm = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pre-commit = "^3.4.0"
pytest-rerunfailures = "^12.0"
tensorboard = "*"
mypy = "^1.9.0"
doit = "^0.36.0"
types-tqdm = "^4.66.0.20240106"
pandas-stubs = [
    { version = ">=2.2.1.240316", python = ">=3.9" },
    { version = "<2.2.1.240316", python = "<3.9" },
]


[tool.poetry.group.examples.dependencies]
torchvision = "*"
jupyterlab = "^4.0.7"
jupytext = "^1.15.2"
matplotlib = "^3.6.0"
ipywidgets = "^8.1.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[tool.poetry-dynamic-versioning.files."src/training_loop/_version.py"]
persistent-substitution = true
initial-content = """
# Generated by poetry-dynamic-versioning plugin.
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
